<resources>
    <string name="app_name">AndroidTest</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="project">Project</string>
    <string name="bill_rate">Bil rate</string>
    <string name="date">Date</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="select_date">Choose date</string>
    <string name="update">Update</string>
    <string name="edit_text_error">Field cannot be empty</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="project_name">Project Name</string>
    <string name="no_data">No Data</string>
</resources>
