<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/projectNameInputLayout"
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content"
            android:hint="@string/project"
            app:errorEnabled="true"
            app:helperTextEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/projectNameInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rateInputLayout"
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bill_rate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/projectNameInputLayout"
            app:helperTextEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateLabelText"
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rateInputLayout"
            app:helperTextEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateTextView"
                android:focusableInTouchMode="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/startTimeLabel"
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dateLabelText"
            app:helperTextEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/startTimeTextView"
                android:focusableInTouchMode="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/endTimeLabel"
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/end_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startTimeLabel"
            app:helperTextEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/endTimeTextView"
                android:focusableInTouchMode="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"/>

    </com.google.android.material.textfield.TextInputLayout>



    <Button
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/endTimeLabel"
            android:layout_marginTop="20dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:id="@+id/saveButton"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:layout_height="wrap_content"/>

    <Button
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/saveButton"
            android:layout_marginTop="20dp"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:visibility="gone"
            android:id="@+id/deleteBtn"
            android:background="@color/colorWhite"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>